# youtube_metadata_verifier

./: .gitignore  LICENSE  README.md  corrected.json  pyproject.toml
src/yt_metadata_verifier/: cli.py
